--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Telegram Bot Token
 TELEGRAM_BOT_TOKEN=7971051467:AAEgFdgmEcmfYmIWfSqQ_sCv0MNNzcrl49Y
 
-# Pexels API Key for fetching anime images
-PEXELS_API_KEY=WSyi42GlhN2ypUgv5NGs18gQvMn9bVqyZBfpm6ZRygYUovXfLuTcdGEg
+# DeepAI API Key
+DEEP_AI_API_KEY=9e5036fd-9a67-469a-acbd-b4f0de820353
 
 # Main and Backup Channel Information
 MAIN_CHANNEL_USERNAME=@your_main_channel_username
